--- a/osa0/4.md
+++ b/osa0/4.md
@@ -1,27 +1,19 @@
+```mermaid
 sequenceDiagram
     participant user
     participant browser
     participant server
-    user->>+browser: kirjoittaa muistiinpanon ja painaa save
+    user->>browser: kirjoittaa muistiinpanon ja painaa save
     browser->>+server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
-    activate server
     Note right of server: lisää muistiinpanon data.json tiedostoon
-    server->>+browser: HTTP Status Code 302 redirect to /exampleapp/notes
-    deactivate server
+    server-->>-browser: HTTP Status Code 302 redirect to /exampleapp/notes
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/notes
-    activate server
     server-->>-browser: HTML document
-    deactivate server
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
-    activate server
-    server->>+browser: CSS document
-    deactivate server
+    server-->>-browser: CSS document
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
-    activate server
-    server->>+browser: JavaScript file
-    deactivate server
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
-    activate server
-    server->>+browser: notes from the data.json file
-    deactivate server
-    browser->>+user: uusi muistiinpano näkyy
+    server-->>-browser: JavaScript file
+    browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+    server-->>-browser: notes from the data.json file
+    browser-->>user: uusi muistiinpano näkyy
+```
