--- a/osa0/6.md
+++ b/osa0/6.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     participant user
     participant browser
@@ -5,5 +6,6 @@ sequenceDiagram
     user->>+browser: kirjoittaa muistiinpanon ja painaa save
     browser->>+server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
     Note right of server: lisää muistiinpanon data.json tiedostoon
-    server->>+browser: HTTP 201 Created
-    browser->>+user: uusi muistiinpano näkyy
+    server-->>-browser: HTTP 201 Created
+    browser-->>-user: uusi muistiinpano näkyy
+```
