--- a/osa0/5.md
+++ b/osa0/5.md
@@ -1,17 +1,15 @@
+```mermaid
 sequenceDiagram
     participant browser
     participant server
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/spa
-    server-->>+browser: HTML document
-    deactivate server
+    server-->>-browser: HTML document
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
-    server-->>+browser: CSS document
-    deactivate server
+    server-->>-browser: CSS document
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
-    server-->>+browser: spa.js document
-    deactivate server
+    server-->>-browser: spa.js document
     browser->>browser: browser executes spa.js
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
-    server-->>+browser: json.file containing notes
+    server-->>-browser: json.file containing notes
     browser->>browser: notes from the data.json file are parsed and displayed
-    deactivate server
+```
